# OpenXR-SDK-Source

src/tests/: CMakeLists.txt
src/tests/vr_camera_stream/: CMakeLists.txt  main.cpp  test_camera.cpp  vr_camera_app.cpp  vr_camera_app.h
src/tests/vr_camera_stream/camera/: camera_capture.cpp  camera_capture.h
src/tests/vr_camera_stream/utils/: timer.cpp  timer.h
